fix(tmux): ensure hex colors use lowercase for mode-style compatibility
Tmux mode-style option does not work correctly when hex color codes
start with uppercase letters. Convert all color values to lowercase
using string.lower() in the generator to ensure compatibility.

- Updated all generated tmux theme files to use lowercase hexadecimal
color values.

--- a/extras/tmux/themes/dark/oasis_cactus_dark.conf
+++ b/extras/tmux/themes/dark/oasis_cactus_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Cactus Dark
-set -ogq @thm_fg "#DDF0E5"
-set -ogq @thm_primary "#7FBB82"
-set -ogq @thm_secondary "#FF8080"
-set -ogq @thm_prefix "#FFA0A0"
+set -ogq @thm_fg "#ddf0e5"
+set -ogq @thm_primary "#7fbb82"
+set -ogq @thm_secondary "#ff8080"
+set -ogq @thm_prefix "#ffa0a0"
 
 # Surfaces and overlays
-set -ogq @thm_core "#1C261E"
-set -ogq @thm_mantle "#2C3A30"
-set -ogq @thm_surface "#3C4B3E"
+set -ogq @thm_core "#1c261e"
+set -ogq @thm_mantle "#2c3a30"
+set -ogq @thm_surface "#3c4b3e"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#AED6B0"
-set -ogq @thm_green "#34CB7D"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#87CEEB"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#aed6b0"
+set -ogq @thm_green "#34cb7d"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#87ceeb"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
