--- a/extras/tmux/themes/dark/oasis_canyon_dark.conf
+++ b/extras/tmux/themes/dark/oasis_canyon_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Canyon Dark
-set -ogq @thm_fg "#F8E7D3"
-set -ogq @thm_primary "#FFA247"
-set -ogq @thm_secondary "#87CEEB"
-set -ogq @thm_prefix "#34CB7D"
+set -ogq @thm_fg "#f8e7d3"
+set -ogq @thm_primary "#ffa247"
+set -ogq @thm_secondary "#87ceeb"
+set -ogq @thm_prefix "#34cb7d"
 
 # Surfaces and overlays
-set -ogq @thm_core "#2F1A05"
+set -ogq @thm_core "#2f1a05"
 set -ogq @thm_mantle "#402412"
 set -ogq @thm_surface "#624020"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#FFB870"
-set -ogq @thm_green "#34CB7D"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#96D4CB"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#ffb870"
+set -ogq @thm_green "#34cb7d"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#96d4cb"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
