--- a/extras/tmux/themes/dark/oasis_dune_dark.conf
+++ b/extras/tmux/themes/dark/oasis_dune_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Dune Dark
-set -ogq @thm_fg "#E8E5DA"
-set -ogq @thm_primary "#BDB76B"
-set -ogq @thm_secondary "#A7D3A9"
-set -ogq @thm_prefix "#53D390"
+set -ogq @thm_fg "#e8e5da"
+set -ogq @thm_primary "#bdb76b"
+set -ogq @thm_secondary "#a7d3a9"
+set -ogq @thm_prefix "#53d390"
 
 # Surfaces and overlays
-set -ogq @thm_core "#2E2620"
-set -ogq @thm_mantle "#3C332C"
-set -ogq @thm_surface "#534A3F"
+set -ogq @thm_core "#2e2620"
+set -ogq @thm_mantle "#3c332c"
+set -ogq @thm_surface "#534a3f"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#F0E68C"
-set -ogq @thm_green "#53D390"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#96D4CB"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#f0e68c"
+set -ogq @thm_green "#53d390"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#96d4cb"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
