--- a/extras/tmux/themes/dark/oasis_midnight_dark.conf
+++ b/extras/tmux/themes/dark/oasis_midnight_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Midnight Dark
-set -ogq @thm_fg "#F7F4F2"
-set -ogq @thm_primary "#D06666"
-set -ogq @thm_secondary "#FFA852"
-set -ogq @thm_prefix "#81C0B6"
+set -ogq @thm_fg "#f7f4f2"
+set -ogq @thm_primary "#d06666"
+set -ogq @thm_secondary "#ffa852"
+set -ogq @thm_prefix "#81c0b6"
 
 # Surfaces and overlays
 set -ogq @thm_core "#101418"
-set -ogq @thm_mantle "#14181C"
-set -ogq @thm_surface "#1C242C"
+set -ogq @thm_mantle "#14181c"
+set -ogq @thm_surface "#1c242c"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#F28D8D"
-set -ogq @thm_green "#53D390"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#8FD1C7"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#f28d8d"
+set -ogq @thm_green "#53d390"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#8fd1c7"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
