--- a/extras/tmux/themes/dark/oasis_mirage_dark.conf
+++ b/extras/tmux/themes/dark/oasis_mirage_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Mirage Dark
-set -ogq @thm_fg "#DDEFEF"
-set -ogq @thm_primary "#5ABAAE"
-set -ogq @thm_secondary "#FFA247"
-set -ogq @thm_prefix "#C28EFF"
+set -ogq @thm_fg "#ddefef"
+set -ogq @thm_primary "#5abaae"
+set -ogq @thm_secondary "#ffa247"
+set -ogq @thm_prefix "#c28eff"
 
 # Surfaces and overlays
-set -ogq @thm_core "#18252A"
-set -ogq @thm_mantle "#1A2D33"
-set -ogq @thm_surface "#2A3F46"
+set -ogq @thm_core "#18252a"
+set -ogq @thm_mantle "#1a2d33"
+set -ogq @thm_surface "#2a3f46"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#96D4CB"
-set -ogq @thm_green "#34CB7D"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#94D0FE"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#96d4cb"
+set -ogq @thm_green "#34cb7d"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#94d0fe"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
