--- a/extras/tmux/themes/dark/oasis_night_dark.conf
+++ b/extras/tmux/themes/dark/oasis_night_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Night Dark
-set -ogq @thm_fg "#F7F4E9"
-set -ogq @thm_primary "#D06666"
-set -ogq @thm_secondary "#FFA247"
-set -ogq @thm_prefix "#58B8FD"
+set -ogq @thm_fg "#f7f4e9"
+set -ogq @thm_primary "#d06666"
+set -ogq @thm_secondary "#ffa247"
+set -ogq @thm_prefix "#58b8fd"
 
 # Surfaces and overlays
-set -ogq @thm_core "#0D0D1A"
-set -ogq @thm_mantle "#06060E"
+set -ogq @thm_core "#0d0d1a"
+set -ogq @thm_mantle "#06060e"
 set -ogq @thm_surface "#262633"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#F58888"
-set -ogq @thm_green "#53D390"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#96D4CB"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#f58888"
+set -ogq @thm_green "#53d390"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#96d4cb"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
