--- a/extras/tmux/themes/dark/oasis_rose_dark.conf
+++ b/extras/tmux/themes/dark/oasis_rose_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Rose Dark
-set -ogq @thm_fg "#EDD5E7"
-set -ogq @thm_primary "#FFA0A0"
-set -ogq @thm_secondary "#F4E36B"
-set -ogq @thm_prefix "#87CEEB"
+set -ogq @thm_fg "#edd5e7"
+set -ogq @thm_primary "#ffa0a0"
+set -ogq @thm_secondary "#f4e36b"
+set -ogq @thm_prefix "#87ceeb"
 
 # Surfaces and overlays
 set -ogq @thm_core "#301828"
-set -ogq @thm_mantle "#3E2636"
-set -ogq @thm_surface "#523A4B"
+set -ogq @thm_mantle "#3e2636"
+set -ogq @thm_surface "#523a4b"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#FFA0A0"
-set -ogq @thm_green "#34CB7D"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#8FD1C7"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#ffa0a0"
+set -ogq @thm_green "#34cb7d"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#8fd1c7"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
