--- a/extras/tmux/themes/dark/oasis_sol_dark.conf
+++ b/extras/tmux/themes/dark/oasis_sol_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Sol Dark
-set -ogq @thm_fg "#FFE0DA"
-set -ogq @thm_primary "#E87272"
-set -ogq @thm_secondary "#FFA247"
-set -ogq @thm_prefix "#58B8FD"
+set -ogq @thm_fg "#ffe0da"
+set -ogq @thm_primary "#e87272"
+set -ogq @thm_secondary "#ffa247"
+set -ogq @thm_prefix "#58b8fd"
 
 # Surfaces and overlays
-set -ogq @thm_core "#2F1815"
-set -ogq @thm_mantle "#3A2521"
-set -ogq @thm_surface "#4F312B"
+set -ogq @thm_core "#2f1815"
+set -ogq @thm_mantle "#3a2521"
+set -ogq @thm_surface "#4f312b"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#F39493"
-set -ogq @thm_green "#34CB7D"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#8FD1C7"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#f39493"
+set -ogq @thm_green "#34cb7d"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#8fd1c7"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
