--- a/extras/tmux/themes/dark/oasis_starlight_dark.conf
+++ b/extras/tmux/themes/dark/oasis_starlight_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Starlight Dark
-set -ogq @thm_fg "#FAF7F0"
-set -ogq @thm_primary "#58B8FD"
-set -ogq @thm_secondary "#F3EA9F"
-set -ogq @thm_prefix "#F8B471"
+set -ogq @thm_fg "#faf7f0"
+set -ogq @thm_primary "#58b8fd"
+set -ogq @thm_secondary "#f3ea9f"
+set -ogq @thm_prefix "#f8b471"
 
 # Surfaces and overlays
 set -ogq @thm_core "#000000"
 set -ogq @thm_mantle "#080808"
-set -ogq @thm_surface "#1A1A1A"
+set -ogq @thm_surface "#1a1a1a"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#58B8FD"
-set -ogq @thm_green "#34CB7D"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#A8DDD5"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#58b8fd"
+set -ogq @thm_green "#34cb7d"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#a8ddd5"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
