--- a/extras/tmux/themes/dark/oasis_twilight_dark.conf
+++ b/extras/tmux/themes/dark/oasis_twilight_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Twilight Dark
-set -ogq @thm_fg "#E6E0F8"
-set -ogq @thm_primary "#C28EFF"
-set -ogq @thm_secondary "#F3EA9F"
-set -ogq @thm_prefix "#34CB7D"
+set -ogq @thm_fg "#e6e0f8"
+set -ogq @thm_primary "#c28eff"
+set -ogq @thm_secondary "#f3ea9f"
+set -ogq @thm_prefix "#34cb7d"
 
 # Surfaces and overlays
-set -ogq @thm_core "#221B2F"
-set -ogq @thm_mantle "#2B243B"
-set -ogq @thm_surface "#352D47"
+set -ogq @thm_core "#221b2f"
+set -ogq @thm_mantle "#2b243b"
+set -ogq @thm_surface "#352d47"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#DEC2FF"
-set -ogq @thm_green "#34CB7D"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#A8DDD5"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#dec2ff"
+set -ogq @thm_green "#34cb7d"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#a8ddd5"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
