--- a/extras/tmux/themes/dark/oasis_desert_dark.conf
+++ b/extras/tmux/themes/dark/oasis_desert_dark.conf
@@ -1,10 +1,10 @@
 # vim:set ft=tmux:
 
 # --> Oasis Desert Dark
-set -ogq @thm_fg "#F7EDE1"
-set -ogq @thm_primary "#D06666"
-set -ogq @thm_secondary "#F0E68C"
-set -ogq @thm_prefix "#87CEEB"
+set -ogq @thm_fg "#f7ede1"
+set -ogq @thm_primary "#d06666"
+set -ogq @thm_secondary "#f0e68c"
+set -ogq @thm_prefix "#87ceeb"
 
 # Surfaces and overlays
 set -ogq @thm_core "#333333"
@@ -12,12 +12,12 @@ set -ogq @thm_mantle "#444444"
 set -ogq @thm_surface "#555555"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#F0E68C"
-set -ogq @thm_green "#6DDFA0"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#A8DDD5"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#f0e68c"
+set -ogq @thm_green "#6ddfa0"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#a8ddd5"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
