--- a/extras/tmux/themes/dark/oasis_lagoon_dark.conf
+++ b/extras/tmux/themes/dark/oasis_lagoon_dark.conf
@@ -1,23 +1,23 @@
 # vim:set ft=tmux:
 
 # --> Oasis Lagoon Dark
-set -ogq @thm_fg "#D9E6FA"
-set -ogq @thm_primary "#1CA0FD"
-set -ogq @thm_secondary "#FFA247"
-set -ogq @thm_prefix "#FFA0A0"
+set -ogq @thm_fg "#d9e6fa"
+set -ogq @thm_primary "#1ca0fd"
+set -ogq @thm_secondary "#ffa247"
+set -ogq @thm_prefix "#ffa0a0"
 
 # Surfaces and overlays
 set -ogq @thm_core "#101825"
-set -ogq @thm_mantle "#1A283F"
-set -ogq @thm_surface "#22385C"
+set -ogq @thm_mantle "#1a283f"
+set -ogq @thm_surface "#22385c"
 
 # General
-set -ogq @thm_red "#D06666"
-set -ogq @thm_orange "#FFA247"
-set -ogq @thm_yellow "#F0E68C"
-set -ogq @thm_darkyellow "#58B8FD"
-set -ogq @thm_green "#53D390"
-set -ogq @thm_teal "#8FD1C7"
-set -ogq @thm_darkteal "#A8DDD5"
-set -ogq @thm_blue "#519BFF"
-set -ogq @thm_indigo "#C28EFF"
+set -ogq @thm_red "#d06666"
+set -ogq @thm_orange "#ffa247"
+set -ogq @thm_yellow "#f0e68c"
+set -ogq @thm_darkyellow "#58b8fd"
+set -ogq @thm_green "#53d390"
+set -ogq @thm_teal "#8fd1c7"
+set -ogq @thm_darkteal "#a8ddd5"
+set -ogq @thm_blue "#519bff"
+set -ogq @thm_indigo "#c28eff"
